# slim-osc

./: .gitignore  Cargo.toml  justfile  rustfmt.toml
src/: args.rs  config.rs  connection.rs  hot_reloading.rs  main.rs  packet.rs  state.rs  status.rs
src/state/: config.rs  connection.rs  interval.rs  metrics.rs
